# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: main.yml
hexlet-code/: pyproject.toml
hexlet-code/page_analyzer/: __init__.py
page_analyzer/: app.py  check.py  config.py  constants.py  db_requests.py  parser.py  urls.py  validator.py
page_analyzer/templates/: errors.html  index.html  main.html  url.html  urls.html
